--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ SEO
   <meta name="description" content="Private rides for any event—Cadillac SUV and Sprinter vans available. Professional drivers, flexible pickup times, and fast quotes. Serving the greater Philadelphia area." />
 
   <link rel="icon" href="assets/icons/concord-favicon.png" type="image/png" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
   <meta property="og:title" content="Concord Limo | Private Chauffeur & Event Transportation" />
   <meta property="og:description" content="Private rides for any event—Cadillac SUV and Sprinter vans available. Fast quotes and professional service." />
