removed index.js

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@ SEO
           alt="Concord Limo Logo"
           class="brand-logo brand-bigger hero-logo"
         />
+        <div class="kicker">Greater Philadelphia</div>
+        <h1 class="main-title">Private Chauffeur & Event Transportation</h1>
         <p class="page-body">
           Private transportation for any event — Luxury SUV and Sprinter van
           options for groups of any size.
